RESOLVED FIXED97239
Baseline alignment with inline <table> is broken when margin-top is applied
https://bugs.webkit.org/show_bug.cgi?id=97239
Summary Baseline alignment with inline <table> is broken when margin-top is applied
Daniel Holbert
Reported 2012-09-20 11:14:17 PDT
Created attachment 164952 [details] testcase 1 STEPS TO REPRODUCE: 1. Load attached testcase. (with inline-block "aaa" and inline-table "bbb") EXPECTED RESULTS: "aaa" and "bbb" are baseline-aligned. ACTUAL RESULTS: They're misaligned. "aaa" ends up baseline-aligned with where "bbb" *would* be, if it weren't for the margin-top. So basically, it looks like Webkit's not taking the margin into consideration when doing baseline-alignment here. Reproduced with latest Chrome build from google repo's "Dev Channel" on Ubuntu. Version 23.0.1270.0 dev
Attachments
testcase 1 (1.25 KB, application/xhtml+xml)
2012-09-20 11:14 PDT, Daniel Holbert
no flags
screenshot (w/ red showing where "aaa" should be) (54.24 KB, image/png)
2012-09-20 11:31 PDT, Daniel Holbert
no flags
reference case 1 (with inline-block instead of inline-table) (1.07 KB, application/xhtml+xml)
2012-09-20 11:44 PDT, Daniel Holbert
no flags
Patch (5.01 KB, patch)
2013-06-20 23:59 PDT, Yuki Sekiguchi
beidson: review-
Daniel Holbert
Comment 1 2012-09-20 11:31:10 PDT
Created attachment 164955 [details] screenshot (w/ red showing where "aaa" should be) Here's a screenshot of the rendering, with red arrow & line showing where "aaa" _should_ be.
Daniel Holbert
Comment 2 2012-09-20 11:44:10 PDT
Created attachment 164957 [details] reference case 1 (with inline-block instead of inline-table) Here's a reference case, using an inline-block for "bbb" instead of an inline-table. My chrome dev channel build gets this one right. ("aaa" and "bbb" are aligned) testcase 1 should render just like this reference case. In Opera 12.02 and Firefox 15.0.1, the testcase & reference case render identically. (aside from the explanatory text)
Yuki Sekiguchi
Comment 3 2013-06-20 23:59:26 PDT
Brady Eidson
Comment 4 2016-05-24 22:01:11 PDT
Comment on attachment 205153 [details] Patch Assuming that patches for review since 2013 are stale, r-
Radar WebKit Bug Importer
Comment 5 2022-10-07 13:32:46 PDT
Sammy Gill
Comment 6 2022-10-07 13:54:41 PDT
EWS
Comment 7 2022-10-10 11:15:45 PDT
Committed 255357@main (c0048e83eb23): <https://commits.webkit.org/255357@main> Reviewed commits have been landed. Closing PR #5153 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.