Add margin when comptuing baseline position for tables. https://bugs.webkit.org/show_bug.cgi?id=97239 rdar://problem/100910532

Reviewed by Brent Fulgham.

After computing the baseline of a table, we need to take into
consideration any margins that are shifting the element. Without adding
the margin to the baseline, any items that are basline against the table
may become offset by that amount.

* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::baselinePosition const):

Canonical link: https://commits.webkit.org/255357@main